--- a/my-app/src/pages/LoginPage.css
+++ b/my-app/src/pages/LoginPage.css
@@ -1,33 +1,39 @@
 /* LoginPage.css */
- 
+
 .login-container {
   max-width: 400px;
   margin: auto;
   padding: 20px;
   text-align: center;
-  background-color: #fff; /* Set background color for the entire container */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
-  border-radius: 8px; /* Add border radius for rounded corners */
+  background-color: #f8f8f8; /* Light gray background */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  color: #333; /* Text color */
 }
 
 .login-heading {
   font-size: 24px;
   margin-bottom: 20px;
-  color: #333; /* Adjust the color based on Apple's design */
+  color: #4a4a4a; /* Dark gray text color */
+}
+
+.login-box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 
 .login-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 20px; /* Adjust padding for inner content */
 }
 
 .input-label {
   margin-bottom: 10px;
   text-align: left;
   font-size: 14px;
-  color: #666; /* Adjust the color based on Apple's design */
+  color: #666; /* Lighter gray text color */
 }
 
 .login-input {
@@ -37,11 +43,13 @@
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  background-color: #fff; /* White input background */
+  color: #333; /* Dark gray text color */
 }
 
 .login-button {
-  background-color: #4caf50; /* Adjust the color based on Apple's design */
-  color: #fff; /* Adjust the color based on Apple's design */
+  background-color: #8e44ad; /* Orange color for login button */
+  color: #fff;
   padding: 10px 20px;
   font-size: 16px;
   border: none;
@@ -50,17 +58,22 @@
 }
 
 .login-button:hover {
-  background-color: #036506; /* Adjust the color based on Apple's design */
+  background-color:  #673ab7  ; /* Darker orange on hover */
 }
 
 .signup-link {
   margin-top: 20px;
   font-size: 14px;
-  color: #333; /* Adjust the color based on Apple's design */
+  color: #666; /* Lighter gray text color */
 }
 
 .signup-link-text {
-  color: #0070c9; /* Adjust the color based on Apple's design */
+  color: #009688; /* Teal color */
   text-decoration: none;
   font-weight: bold;
+}
+
+.modal-content p {
+  color: #ff0000;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
