--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -21,7 +21,7 @@
 
 .App {
   text-align: center;
-  padding: 4em 0;
+  padding: 0 0;
 }
 
 
@@ -45,7 +45,3 @@
 .form-input{
   @apply mt-1 block w-full py-2 px-3 border border-gray-200 bg-white rounded-md focus:outline-none focus:ring-indigo-500 sm:text-sm;
 }
-
-
-
-
